@@ -28,13 +28,6 @@ ifneq (,$(filter experimental UNRELEASED,$(DISTRIBUTION)))
   export KW_CHECK_NONFATAL = y
 endif
 
-# Set Multi-Arch fields only when built in a suite that supports it
-ifneq (,$(DEB_HOST_MULTIARCH))
-DEFINE_MULTIARCH = -Vlinux:Multi-Arch=$(1)
-else
-DEFINE_MULTIARCH = -Vlinux:Multi-Arch=
-endif
-
 include debian/rules.defs
 
 stamp = [ -d $(dir $@) ] || mkdir $(dir $@); touch $@
@@ -204,7 +197,7 @@ install-doc: $(STAMPS_DIR)/build-doc
 	| \
 	cpio -pd --preserve-modification-time '$(CURDIR)/$(OUT_DIR)/html'
 	gzip -9qfr $(OUT_DIR)/Documentation
-	+$(MAKE_SELF) install-base GENCONTROL_ARGS='$(call DEFINE_MULTIARCH,foreign)'
+	+$(MAKE_SELF) install-base
 
 install-manual: PACKAGE_NAME = linux-manual-$(VERSION)
 install-manual: DIR=$(BUILD_DIR)/build-doc
@@ -213,7 +206,7 @@ install-manual: $(STAMPS_DIR)/build-doc
 	dh_prep
 	set -o pipefail; \
 	find $(DIR)/Documentation/DocBook/man/ -name '*.9' | xargs dh_installman
-	+$(MAKE_SELF) install-base GENCONTROL_ARGS='$(call DEFINE_MULTIARCH,foreign)'
+	+$(MAKE_SELF) install-base
 
 install-headers_$(ARCH): PACKAGE_NAMES = linux-headers-$(ABINAME)-all linux-headers-$(ABINAME)-all-$(ARCH)
 install-headers_$(ARCH): DH_OPTIONS = $(foreach p, $(PACKAGE_NAMES), -p$(p))
@@ -319,13 +312,11 @@ install-libc-dev_$(ARCH):
 	rm -rf $(OUT_DIR)/include/drm $(OUT_DIR)/include/scsi
 	find $(OUT_DIR)/include \( -name .install -o -name ..install.cmd \) -execdir rm {} +
 
-ifneq (,$(DEB_HOST_MULTIARCH))
 	# Move include/asm to arch-specific directory
 	mkdir -p $(OUT_DIR)/include/$(DEB_HOST_MULTIARCH)
 	mv $(OUT_DIR)/include/asm $(OUT_DIR)/include/$(DEB_HOST_MULTIARCH)/
-endif
 	
-	+$(MAKE_SELF) install-base GENCONTROL_ARGS='$(call DEFINE_MULTIARCH,same)'
+	+$(MAKE_SELF) install-base
 
 install-support: PACKAGE_NAME = linux-support-$(ABINAME)
 install-support: DH_OPTIONS = -p$(PACKAGE_NAME)
@@ -340,7 +331,7 @@ install-support:
 	cp debian/lib/python/debian_linux/*.py $(PACKAGE_DIR)$(PACKAGE_ROOT)/lib/python/debian_linux
 	dh_python2
 	dh_link $(PACKAGE_ROOT) /usr/src/$(PACKAGE_NAME)
-	+$(MAKE_SELF) install-base GENCONTROL_ARGS='$(call DEFINE_MULTIARCH,foreign)'
+	+$(MAKE_SELF) install-base
 
 install-image_$(ARCH)_$(FEATURESET)_$(FLAVOUR)_$(TYPE): REAL_VERSION = $(ABINAME)$(LOCALVERSION)
 install-image_$(ARCH)_$(FEATURESET)_$(FLAVOUR)_$(TYPE): PACKAGE_NAME = linux-image-$(REAL_VERSION)
@@ -509,6 +500,6 @@ install-source: $(BUILD_DIR)/linux-source-$(UPSTREAMVERSION).tar.bz2 $(foreach F
 	dh_testdir
 	dh_testroot
 	dh_install '$^' /usr/src
-	+$(MAKE_SELF) install-base GENCONTROL_ARGS='$(call DEFINE_MULTIARCH,foreign)'
+	+$(MAKE_SELF) install-base
 
 # vim: filetype=make
